Fix: Incorrect upload width on mobile

--- a/src/styles/Asset.module.css
+++ b/src/styles/Asset.module.css
@@ -16,7 +16,7 @@
 
 @media only screen and (max-width: 667px) {
   .Asset img {
-   height: 225px;
-   width: 300px;
+   height: 80%;
+   width: 100%;
   }
 }
